submenu animation, css cleanup & break into multiple files bugfix : home->menu->spectacles->back : .menu-hide elts were still hidden…

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,306 +9,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 
 /* globals */
-* { box-sizing: border-box }
-strong { font-weight: bold }
-
-body,html {
-	margin: 0;
-	padding: 0;
-	touch-action: manipulation;
-	/*user-select: none; */
-	font-size: 100%;
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: none;
-	-webkit-font-smoothing: subpixel-antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	font-smoothing: subpixel-antialiased;
-	-webkit-tap-highlight-color: 0;
-	-webkit-tap-highlight-color: transparent;
-}
-
-body{
-	font-family: Arial;
-	font-size: 16px;
-	background: black;
-	color: white;
-}
-
-
-/* typography */
-@font-face {
-	font-family: 'PlutoCondBold';
-	src: url('../fonts/2E4864_0_0.eot');
-	src: url('../fonts/2E4864_0_0.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/2E4864_0_0.woff2') format('woff2'),
-		 url('../fonts/2E4864_0_0.woff') format('woff'),
-		 url('../fonts/2E4864_0_0.ttf') format('truetype');
-}
- 
-  
-@font-face {
-	font-family: 'PlutoCondLight';
-	src: url('../fonts/2E4864_1_0.eot');
-	src: url('../fonts/2E4864_1_0.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/2E4864_1_0.woff2') format('woff2'),
-		 url('../fonts/2E4864_1_0.woff') format('woff'),
-		 url('../fonts/2E4864_1_0.ttf') format('truetype');
-}
-
-.pluto-bold{ font-family: 'PlutoCondBold' }
-.pluto-light{ font-family: 'PlutoCondLight' }
-
-
-/* vars */
-:root {
-	--redColor: #e34f42;
-}
-
-/* common */
-.page > footer{
-	z-index: 1;
-	display: flex;
-	position: absolute;
-	bottom: 0; left: 0; right: 0; 
-	color: rgba(150,150,150,0.6);
-	text-transform: uppercase;
-	font-size: 0.7vw;
-	line-height: 2;
-	padding: 0 100px 50px;
-	text-shadow: 1px 0 rgba(0,0,0,0.2);
-	transition: color .7s ease-out;
-}
-
-.page > footer > div{
-	margin-right: 30px;
-}
-
-.page > footer > div a{
-	color: rgba(150,150,150,0.6);
-	text-decoration: none;
-	font-weight: bold;
-	transition: color .7s ease-out;
-}
-
-.page > footer:hover > div a,
-.page > footer:hover{
-	color: rgba(200,200,200,0.6);
-}
-
-.table{
-	display: table
-}
-
-.cell{
-	display: table-cell;
-  	vertical-align: middle;
-}
-
-.logo{
-	position: absolute;
-	z-index: 1;
-	top: 50px;
-}
-
-body > .logo{
-	right: 100px;
-}
-
-
-/* scrollbar overrides */
-.section .ps-container>.ps-scrollbar-y-rail,
-.section .ps-container>.ps-scrollbar-y-rail>.ps-scrollbar-y{
-	border-radius: 0;
-	width: 1px;
-}
-.section .ps-container:hover>.ps-scrollbar-y-rail,
-.section .ps-container>.ps-scrollbar-y-rail{
-	opacity: 1;
-	background: rgba(255,255,255,0.2);
-}
-.section .ps-container>.ps-scrollbar-y-rail>.ps-scrollbar-y{
-	background: white;
-}
-
-
-/* menu */
-.menu .logo{
-	left: 50%; transform: translateX(-50%);
-}
-
-.menu-prompt{
-	position: absolute;
-	cursor: pointer;
-	z-index: 1;
-	top: 50px;
-	left: 100px;
-}
-
-.menu{
-	opacity: 0;
-	position: absolute;
-	top: 0; left: 0; right: 0; bottom: 0;
-	color: white;
-	font-family: 'PlutoCondBold';
-	text-align: center;
-	z-index: 1;
-	text-transform: uppercase;
-}
-
-.menu ul{
-	position: absolute;
-	top: 50%; left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.menu .home{
-	width: 16px;
-	height: 16px;
-	border: 1px solid white;
-	position: absolute;
-	top: -40px; 
-	left: 50%; transform: translateX(-50%);
-}
-
-.menu .close{
-	position: absolute;
-	bottom: -40px; 
-	left: 50%; transform: translateX(-50%);
-	width: 17px; height: 17px;
-	background: url(../img/icn-close.png) no-repeat;
-}
-
-.menu .home,
-.menu .close{
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-}
-
-.menu li{
-	font-size: 18px;
-	line-height: 2.5;
-}
-
-.menu a{
-	color: white;
-	text-decoration: none;
-}
-
-.debug .nav{
-	display: block;
-}
-
-.nav{
-	display: none;
-	position: absolute;
-	z-index: 1;
-}
-
-.nav a{
-	color: white;
-}
-
-
-/* sections */
-.section{
-	z-index: 0;
-	position: absolute;
-	width: 100%; height: 100%;
-	padding: 100px;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
-}
-
-.section:before{
-	content: "";
-	position: fixed;
-	top:0; right: 0; bottom: 0; left: 0;
-	background: rgba(0,0,0,0.4);
-}
-
+@import url("global.css");
+@import url("menu.css");
 
 /* home */
-.section.home{ 
-	position: relative;
-	width: auto; height: auto; padding: 0;
-}
-
-.home .swiper-slide{
-	background-size: cover;
-	height: 100vh;
-}
-
-.home .swiper-container .txtblock{
-	display: block;
-	position: relative; 
-	width: 100%;
-	padding: 0 100px;
-	text-decoration: none;
-
-	margin-left: -5px;
-	line-height: 1.1;
-	color: white;
-}
-
-.home .swiper-container .moment{
-	font-size: 23px;
-	letter-spacing: 0.1em;
-}
-
-.home .swiper-container .moment,
-.home .swiper-container .title{
-	text-transform: uppercase;
-}
-
-.home .swiper-container .auteurs,
-.home .swiper-container .moment{
-	padding-left: 5px;
-}
-
-.home .swiper-container .auteurs{
-	font-size: 16px;
-}
-.home .swiper-container .auteurs strong{
-	font-family: 'PlutoCondBold';
-}
-
-.home .swiper-container .title{
-	/*position: absolute;*/
-	font-size: 72px;
-	line-height: .9;
-	margin: .1em 0;
-	color: var(--redColor);
-}
-
-.home .swiper-container-horizontal>.swiper-pagination{
-	width: auto;
-	right: 100px;
-	bottom: initial;
-	left: initial;
-	top: 50%;
-	transform: translate3D(0,-50%,0);
-}
-
-.home .swiper-pagination-bullet.swiper-pagination-bullet-active { 
-	opacity: 1;
-}
-.home .swiper-pagination-bullet { 
-	color: white;
-	width: auto;
-	height: auto;
-	display: block;
-	border-radius: initial;
-	background: transparent;
-	opacity: .5;
-	padding: 0.5em 0;
-
-}
-.home .swiper-pagination-bullet:after{
-	content: ".";
-	display: inline-block;
-}
+@import url("home.css");
 
 
 /* section-list */
@@ -360,8 +65,6 @@ body > .logo{
 
 
 /* section-item */
-.section.item{}
-
 .section.item .wrap{
 	position: relative;
 	z-index: 1;
